misc css fixes related to layout sections white space

--- a/_dev/_scss/content/_section-features.scss
+++ b/_dev/_scss/content/_section-features.scss
@@ -1,6 +1,8 @@
 @use "../utilities/variables";
 
 .section-features {
+    margin: 1rem 0;
+
     .section__body {
         background: variables.$green;
 
