--- a/_dev/_scss/content/_section-tags.scss
+++ b/_dev/_scss/content/_section-tags.scss
@@ -1,5 +1,4 @@
 .section-tags {
-    margin: 2rem 0;
     text-align: center;
 
     .tags__list {
